暂存进度
