# Analysis/API/stage1_3/swagger.yaml
@@ -5,7 +5,7 @@ info:
   title: "Marx"
   termsOfService: "http://wekan.mcfhq.com"
 host: "localhost"
-basePath: "/"
+basePath: "/api"
 tags:
 - name: "user"
   description: "用户账号相关的API"
@@ -114,23 +114,26 @@ definitions:
   Userinfo:
     type: "object"
     properties:
-      id:
-        type: "string"
-        description: "id号"
-        default: "16041519"
-      name:
-        type: "string"
-        description: "用户名"
-        default: "周树人"
-      usertype:
-        type: "number"
-        format: "int64"
-        minItems: 1
-        maxItems: 3
-        example: [
-          0,
-          1
-      ]
+      status:
+        type: "integer"
+        description: "状态码"
+        default: "1"
+      info:
+        type: "object"
+        properties:
+          id:
+            type: "string"
+            description: "id号"
+          usertype:
+            type: "object"
+            format: "int64"
+            minItems: 1
+            maxItems: 3
+            example: [
+              1: "true",
+              2: "false",
+              3: "false"
+          ]
   ActionState:
     type: "object"
     properties:
